[gd_scene load_steps=5 format=2]

[ext_resource path="res://init_tool/TerrainInitTool.tscn" type="PackedScene" id=1]
[ext_resource path="res://TerrainScreenManager.gd" type="Script" id=2]
[ext_resource path="res://flood_tool/TerrainFloodTool.tscn" type="PackedScene" id=3]
[ext_resource path="res://surface_tool/TerrainSurfaceTool.tscn" type="PackedScene" id=4]

[node name="TerrainScreenManager" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="TerrainInitTool" parent="." instance=ExtResource( 1 )]

[node name="TerrainFloodTool" parent="." instance=ExtResource( 3 )]
visible = false

[node name="TerrainSurfaceTool" parent="." instance=ExtResource( 4 )]
visible = false

[connection signal="heightmap_saved" from="TerrainInitTool" to="." method="_on_TerrainInitTool_heightmap_saved"]
[connection signal="slices_saved" from="TerrainFloodTool" to="." method="_on_TerrainFloodTool_slices_saved"]
